psp-migration-cel/check-supplemental-groups/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  securityContext:
    supplementalGroups:
    - 120
    - 230
    - 550
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  securityContext:
    supplementalGroups: 
    - 1000
    - 120
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  securityContext:
    runAsGroup: 0
    supplementalGroups:
    - 580
    - 0
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  securityContext:
    supplementalGroups:
    - 100
    - 601
    - 600
    runAsGroup: 0
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
