psp-migration-cel/check-supplemental-groups/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  securityContext:
    supplementalGroups: 
    - 150
    - 100
    - 500
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  securityContext:
    supplementalGroups:
    - 550
    - 600
    - 120
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  securityContext:
    runAsGroup: 0
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  securityContext:
    supplementalGroups: 
    - 600
    runAsGroup: 0
  containers:
  - name: busybox01
    image: busybox:1.35
