psp-migration-cel/check-supplemental-groups/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        supplementalGroups:
        - 100
        - 601
        - 600
        runAsGroup: 0
      containers:
      - name: busybox01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          securityContext:
            supplementalGroups: 
            - 1000
            - 120
          containers:
          - name: busybox01
            image: ghcr.io/kyverno/test-busybox:1.35
