psp-migration-cel/check-supplemental-groups/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-check-supplemental-groups
status:
  ready: true
